@@ -3,21 +3,15 @@
     <url>http://foo2oak.rkkda.com/</url>
     <execution>
 	<filter />
+	<prototype>foo2oak-wrapper %A</prototype>
     </execution>
     <comments> <en>
 
-	This is an incomplete prototype driver developed for the HP
-	Color LaserJet 1500 laser printer.  The author has "paused"
-	development, and will continue when someone expresses
-	meaningful interest in the form of sponsorship.
-
-        &lt;p&gt;
+	This is a driver developed for the HP Color LaserJet 1500 laser printer.
 	
 	It is possible that this driver will also work for other Oak
 	Technologies OAKT-based printers, but the author cannot test this.
 
-        &lt;p&gt;
-	
 	The driver supports 1-bit or 2-bit per pixel monochrome and
 	color output, but none of these have been tuned for grayscale
 	or color correction.
