@@ -3,6 +3,7 @@
     <url>http://foo2zjs.rkkda.com/</url>
     <execution>
 	<filter />
+	<prototype>foo2zjs-wrapper %A</prototype>
     </execution>
     <comments> <en>
 
