@@ -20,17 +20,17 @@
     <enum_vals>
 	<enum_val id="ev/foo2zjs-Duplex-1">
 	    <ev_longname> <en>Off</en> </ev_longname>
-	    <ev_shortname> <en>Off</en> </ev_shortname>
+	    <ev_shortname> <en>None</en> </ev_shortname>
 	    <ev_driverval>1</ev_driverval>
 	</enum_val>
 	<enum_val id="ev/foo2zjs-Duplex-2">
 	    <ev_longname> <en>Long Edge (Standard)</en> </ev_longname>
-	    <ev_shortname> <en>LongEdge</en> </ev_shortname>
+	    <ev_shortname> <en>DuplexNoTumble</en> </ev_shortname>
 	    <ev_driverval>2</ev_driverval>
 	</enum_val>
 	<enum_val id="ev/foo2zjs-Duplex-3">
 	    <ev_longname> <en>Short Edge (Flip)</en> </ev_longname>
-	    <ev_shortname> <en>ShortEdge</en> </ev_shortname>
+	    <ev_shortname> <en>DuplexTumble</en> </ev_shortname>
 	    <ev_driverval>3</ev_driverval>
 	</enum_val>
     </enum_vals>
