@@ -25,15 +25,13 @@
 		Toner Yellow (4500 prints) - $119
 		Toner Magenta (4500 prints) - $119
 		Toner Cyan (4500 prints) - $119
-		Waste Toner Box (25000 prints) - $19
-		OPC Drum Catridge (45000 prints) - $149
+		Drum Catridge (45000 prints) - $149
 	    </en> </comments>
-	    <partno>1710517-005</partno>
-	    <partno>1710517-006</partno>
-	    <partno>1710517-007</partno>
-	    <partno>1710517-008</partno>
-	    <partno>1710522-001</partno>
-	    <partno>1710520-001</partno>
+	    <partno>1710587-004</partno>
+	    <partno>1710587-005</partno>
+	    <partno>1710587-006</partno>
+	    <partno>1710587-007</partno>
+	    <partno>1710591-001</partno>
 	</consumables>
     </mechanism>
     <url>http://www.minolta-qms.com/products/color/mc2430DL/index.asp</url>
@@ -42,15 +40,24 @@
 	<!--no pjl--><!--No "text"?-->
     </lang>
     <autodetect>
+	<parallel>
+	    <ieee1284>CLASS:PRINTER;MODEL:magicolor 2430 DL;MANUFACTURER:MINOLTA-QMS;COMMAND SET:ZJS,PJL;</ieee1284>
+	    <manufacturer>MINOLTA-QMS</manufacturer>
+	    <model>magicolor 2430 DL</model>
+	    <commandset>ZJS,PJL</commandset>
+	</parallel>
+	<snmp>
+	    <description>MINOLTA-QMS magicolor 2430 DL</description>
+	</snmp>
     </autodetect>
     <functionality>B</functionality>
     <driver>foo2zjs</driver>
     <unverified/><!--no "contrib_url"-->
     <comments> <en>
 
-	The magicolor 2430 DL is supported by the foo2zjs free
-	software printer driver (similar to the 2300 DL). Ethernet and
-	USB 2.0 connection.
+	The magicolor 2430 DL is a network color laser printer with a
+	2005 street price of $500 USD.  This printer is supported
+	by the foo2zjs free software printer driver.
 
     </en> </comments>
 </printer>
