@@ -1,3 +1,10 @@
+2005-04-13  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Minolta-magicolor_2430_DL.xml,
+	  printer/HP-LaserJet_1000.xml, driver/foo2oak.xml,
+	  driver/foo2zjs.xml, foo2zjs-Duplex.xml: Updated XML entries
+	  against the current "foo2zjs" driver package.
+
 2005-04-12  Tim Waugh <twaugh@redhat.com>
 
 	* driver/Postscript.xml: Fixed renderer command line properly (RH
